Start Assignment 8 and Fix Assignment 7 Contrast Errors

--- a/css/layout-original.css
+++ b/css/layout-original.css
@@ -8,7 +8,6 @@ header {
   height: 10%;
   padding: 1em;
   text-align: center;
-  position: relative;
 }
 
 /* Set nav to sticky*/
@@ -20,6 +19,17 @@ nav {
   position: sticky;
   top: 0;
   width: 100%;
+}
+
+main {
+  width: 80%;
+  height: 80%;
+  max-width: 1100px;
+  box-sizing: border-box;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 /*logo brown original color #775732, logo tan original color was #ca9352*/
@@ -34,28 +44,27 @@ nav {
     width: 4vw;
 }
 
+header {
+    position: relative;
+}
+
 /* set this to relative to parent container */
 headerText {
     position: absolute;
     bottom: 0;
 }
 
+nav {
+    position: sticky;
+    top: 0;
+}
+
+
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
   text-align: center;
   padding: 14px 16px;
-}
-
-main {
-  width: 80%;
-  height: 80%;
-  max-width: 1100px;
-  box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0px;
-  margin-bottom: 0px;
 }
 
 section {
@@ -119,16 +128,4 @@ figcaption {
 
 .favorite {
   max-width: 1100px;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-/* selects all the direct children of container class */
-.container > * {
-  flex-basis: 100px;
 }
